--- a/hangman/index.html
+++ b/hangman/index.html
@@ -9,7 +9,7 @@
 </head>  
 <body>
 
-<h3> Client-side Hangman </h3>
+<h3>Simple Hangman </h3>
 <p> enter a word to be used for the game</p> 
 <input name="textbox1" type="text"/>
 <input name="buttonExecute" onclick="checkword();" type="button" value="Choose Word" />
